--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>
         </section>
     </div>
-    <!-- <script src="https://www.autodeal1.sirqolabs.com/dist/dealerwidget/ratingwidget.min.js"></script> -->
+    <script src="https://www.autodeal1.sirqolabs.com/dist/dealerwidget/ratingwidget.min.js"></script>
     <!-- <script src="https://www.autodeal.dev/dist/dealerwidget/ratingwidget.min.js"></script> -->
     <script>
         (function(widget){
