--- a/footer.html
+++ b/footer.html
@@ -10,25 +10,25 @@
 </head>
 <body class="">
     <div>
-        <a href="/light/default.html" style="margin-left: 20px;">Light</a>
-        <a href="/dark/default.html" style="float: right; margin-right: 20px;">Dark</a>
+        <a href="/light/footer.html" style="margin-left: 20px;">Light</a>
+        <a href="/dark/footer.html" style="float: right; margin-right: 20px;">Dark</a>
     </div>
 
     <div>
-        <p style="text-align: center;">Default Theme - Default Size</p>
+        <p style="text-align: center;">Default Theme - Footer</p>
     </div>
 
     <link rel="stylesheet" href="https://www.autodeal6.sirqolabs.com/stylesheets/autodeal-widget.css">
     <div class="autodeal">
-        <section id="autodeal-widget-main-wrapper" class="wide">
-    		<div class="ad-content-wrapper wide">
+        <section id="autodeal-widget-main-wrapper" class="footer">
+    		<div class="ad-content-wrapper">
                 <a href="https://www.autodeal6.sirqolabs.com/" target="_blank" class="ad-logo">
                     <img src="https://www.autodeal6.sirqolabs.com/images/essentials/logo_white.svg" alt="AutoDeal.com.ph logo">
                 </a>
             </section>
         </div>
     </div>
-    <script src="https://www.autodeal6.sirqolabs.com/widgets/dealer-rating-js?key=66"></script>
+    <script src="https://www.autodeal6.sirqolabs.com/widgets/dealer-rating-js?key=66&size=footer"></script>
     <script>
         (function(widget){
             widget.load();
@@ -36,8 +36,8 @@
     </script>
 
     <div>
-        <a href="/sidebar.html" style="margin-left: 20px;">Sidebar</a>
-        <a href="/footer.html" style="float: right; margin-right: 20px;">Footer</a>
+        <a href="/" style="margin-left: 20px;">Default</a>
+        <a href="/sidebar.html" style="float: right; margin-right: 20px;">Sidebar</a>
     </div>
 </body>
 </html>
