Restructured dir to make paths work with github pages

--- a/ad-dealer-widget-test/light/sidebar.html
+++ b/ad-dealer-widget-test/light/sidebar.html
@@ -10,17 +10,17 @@
 </head>
 <body class="">
     <div>
-        <a href="/footer.html" style="margin-left: 20px;">Default</a>
-        <a href="/dark/footer.html" style="float: right; margin-right: 20px;">Dark</a>
+        <a href="/sidebar.html" style="margin-left: 20px;">Default</a>
+        <a href="/ad-dealer-widget-test/dark/sidebar.html" style="float: right; margin-right: 20px;">Dark</a>
     </div>
 
     <div>
-        <p style="text-align: center;">Light Theme - Footer</p>
+        <p style="text-align: center;">Light Theme: Sidebar</p>
     </div>
 
     <link rel="stylesheet" href="https://www.autodeal6.sirqolabs.com/stylesheets/autodeal-widget.css">
     <div class="autodeal">
-        <section id="autodeal-widget-main-wrapper" class="footer ad-light">
+        <section id="autodeal-widget-main-wrapper" class="sidebar ad-light">
     		<div class="ad-content-wrapper">
                 <a href="https://www.autodeal6.sirqolabs.com/" target="_blank" class="ad-logo">
                     <img src="https://www.autodeal6.sirqolabs.com/images/essentials/logo_black.svg" alt="AutoDeal.com.ph logo">
@@ -28,7 +28,7 @@
             </section>
         </div>
     </div>
-    <script src="https://www.autodeal6.sirqolabs.com/widgets/dealer-rating-js?key=66&theme=light&size=footer"></script>
+    <script src="https://www.autodeal6.sirqolabs.com/widgets/dealer-rating-js?key=66&theme=light&size=sidebar"></script>
     <script>
         (function(widget){
             widget.load();
@@ -36,8 +36,8 @@
     </script>
 
     <div>
-        <a href="/light/default.html" style="margin-left: 20px;">Default</a>
-        <a href="/light/sidebar.html" style="float: right; margin-right: 20px;">Sidebar</a>
+        <a href="/ad-dealer-widget-test/light/default.html" style="margin-left: 20px;">Default</a>
+        <a href="/ad-dealer-widget-test/light/footer.html" style="float: right; margin-right: 20px;">Footer</a>
     </div>
 </body>
 </html>
