--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body class="">
     <div>
-        <a href="/light/default.html" style="margin-left: 20px;">Light</a>
-        <a href="/dark/default.html" style="float: right; margin-right: 20px;">Dark</a>
+        <a href="/ad-dealer-widget-test/light/default.html" style="margin-left: 20px;">Light</a>
+        <a href="/ad-dealer-widget-test/dark/default.html" style="float: right; margin-right: 20px;">Dark</a>
     </div>
 
     <div>
