--- a/ad-dealer-widget-test/dark/footer.html
+++ b/ad-dealer-widget-test/dark/footer.html
@@ -10,7 +10,7 @@
 </head>
 <body class="">
     <div>
-        <a href="/footer.html" style="margin-left: 20px;">Default</a>
+        <a href="/ad-dealer-widget-test/footer.html" style="margin-left: 20px;">Default</a>
         <a href="/ad-dealer-widget-test/light/footer.html" style="float: right; margin-right: 20px;">Light</a>
     </div>
 
