--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div>
-        <p style="text-align: center;">Default Theme - Default Size</p>
+        <p style="text-align: center;">Default Theme - Default Size - TEST</p>
     </div>
 
     <link rel="stylesheet" href="https://www.autodeal6.sirqolabs.com/stylesheets/autodeal-widget.css">
