Moved files to root directory

--- a/footer.html
+++ b/footer.html
@@ -36,7 +36,7 @@
     </script>
 
     <div>
-        <a href="/ad-dealer-widget-test/default.html" style="margin-left: 20px;">Default</a>
+        <a href="/ad-dealer-widget-test" style="margin-left: 20px;">Default</a>
         <a href="/sidebar.html" style="float: right; margin-right: 20px;">Sidebar</a>
     </div>
 </body>
