Added dark background for light themed demos

--- a/light/sidebar.html
+++ b/light/sidebar.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Not AutoDeal | Widget Test" />
     <meta property="og:description" content="" />
 </head>
-<body class="">
+<body class="" style="background-color: black;">
     <div>
         <a href="/ad-dealer-widget-test/sidebar.html" style="margin-left: 20px;">Default</a>
         <a href="/ad-dealer-widget-test/dark/sidebar.html" style="float: right; margin-right: 20px;">Dark</a>
