--- a/footer.html
+++ b/footer.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="https://www.autodeal6.sirqolabs.com/stylesheets/autodeal-widget.css">
     <div class="autodeal">
-        <section id="autodeal-widget-main-wrapper" class="footer">
+        <section id="autodeal-widget-main-wrapper" class="hidden">
     		<div class="ad-content-wrapper">
                 <a href="https://www.autodeal6.sirqolabs.com/" target="_blank" class="ad-logo">
                     <img src="https://www.autodeal6.sirqolabs.com/images/essentials/logo_white.svg" alt="AutoDeal.com.ph logo">
