--- a/light/default.html
+++ b/light/default.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="https://www.autodeal6.sirqolabs.com/stylesheets/autodeal-widget.css">
     <div class="autodeal">
-        <section id="autodeal-widget-main-wrapper" class="wide ad-light">
+        <section id="autodeal-widget-main-wrapper" class="hidden ad-light">
     		<div class="ad-content-wrapper wide">
                 <a href="https://www.autodeal6.sirqolabs.com/" target="_blank" class="ad-logo">
                     <img src="https://www.autodeal6.sirqolabs.com/images/essentials/logo_black.svg" alt="AutoDeal.com.ph logo">
