Fixed footer link

--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@
 
     <div>
         <a href="/ad-dealer-widget-test" style="margin-left: 20px;">Default</a>
-        <a href="/sidebar.html" style="float: right; margin-right: 20px;">Sidebar</a>
+        <a href="/ad-dealer-widget-test/sidebar.html" style="float: right; margin-right: 20px;">Sidebar</a>
     </div>
 </body>
 </html>
